<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.UpdateProfileFragment">
    <data>
        <variable
            name="profile"
            type="com.example.challengechapter5.room.User" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/gray"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_profile"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="20sp"
            android:textColor="@color/blue_dark"
            android:textAlignment="center"
            android:layout_margin="12dp"/>

        <!--        text field input username and password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textfieldUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:textColorHint="@color/navy_blue"
            android:layout_marginTop="16dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor= "@color/navy_blue_deep"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEditText"
                android:text="@{profile.username}"
                style="@style/textFieldStyle"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textfieldNamaLengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_fullname"
            android:textColorHint="@color/navy_blue"
            android:layout_marginTop="16dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor= "@color/navy_blue_deep"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNamaLengkap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEditText"
                android:text="@{profile.namaLengkap}"
                style="@style/textFieldStyle"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textfieldTanggalLahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mm_dd_yyyy"
            android:textColorHint="@color/navy_blue"
            android:layout_marginTop="16dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor= "@color/navy_blue_deep"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTanggalLahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:text="@{profile.tanggalLahir}"
                style="@style/textFieldStyle"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textfieldAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_address"
            android:textColorHint="@color/navy_blue"
            android:layout_marginTop="16dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor= "@color/navy_blue_deep"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEditText"
                android:text="@{profile.alamat}"
                style="@style/textFieldStyle"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnUpdateProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/update"
            style="@style/buttonStyle"
            />


    </LinearLayout>
</layout>